# movie-rating-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/controllers/: movies.py
app/core/: logging.py  logging_config.py
app/db/: init_db.py  session.py
app/models/: models.py
app/repositories/: movies.py
app/schemas/: common.py  movies.py
app/services/: movies.py
scripts/: logging_config.py  seed_check.py  seeddb.sql
