[project]
name = "movie-rating-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Kia",email = "kiafoulad81@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.127.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "movie-rating-system"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "app" }]